force-app/main/default/objects/SmartIntake_Matching_Rule__mdt/SmartIntake_Matching_Rule__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Matching Rule</label>
    <pluralLabel>SmartIntake Matching Rules</pluralLabel>
</CustomObject>