force-app/main/default/objects/SmartIntake_Matching_Rule__mdt/fields/Display_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Field_API_Name__c</fullName>
    <label>Display Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>