force-app/main/default/objects/SmartIntake_Matching_Rule__mdt/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>