force-app/main/default/objects/SmartIntake_Matching_Rule__mdt/fields/Matching_Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Matching_Rule_Key__c</fullName>
    <label>Matching Rule Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>